fix(paging): use virtual thread for CLEANUP_EXECUTOR thread factory
Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>